💄 add specialty section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,59 @@
                 </div>
             </div>
         </section>
+        <section class="container specialty">
+            <div class="specialty__highlight">
+                <div class="specialty__highlight-bottom">
+                    <div class="specialty__item background-orange">
+                        <img src="./assets/images/specialty-bulb-icon.webp" alt="specialty-bulb-icon">
+                        <p>Experts Problems Solver</p>
+                    </div>
+                    <div class="specialty__item background-purple">
+                        <img src="./assets/images/specialty-analytics-icon.webp" alt="specialty-anaytics-icon">
+                        <p>Creative Product Analytic</p>
+                    </div>
+                </div>
+                <div class="specialty__highlight-top">
+                    <div class="specialty__item background-blue">
+                        <img src="./assets/images/specialty-fix-icon.webp" alt="specialty-fix-icon">
+                        <p>Regular Updates & Bug Fixes</p>
+                    </div>
+                    <div class="specialty__item background-pink">
+                        <img src="./assets/images/specialty-support-icon.webp" alt="specialty-support-icon">
+                        <p>High-Rated Quick Support</p>
+                    </div>
+                </div>
+            </div>
+            <div class="specialty__text">
+                <p class="specialty__subheading">
+                    OUR SPECIALTY
+                </p>
+                <h2 class="specialty__heading">What's so Special About Braintech</h2>
+                <p class="specialty__description">Bring to the table win-win survival strategies to ensure dotted
+                    proactive domination. At the end of the day, going forward, a new normal that has evolved.</p>
+                <div class="specialty__progress">
+
+                    <p class="mb-0">Analytics</p>
+                    <div class="progress specialty__progress--analytics">
+                        <div class="progress-bar specialty__progress-bar background-orange" style="width: 86%"
+                            role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100">
+                        </div>
+                    </div>
+                    <p class="mb-0">Development</p>
+                    <div class="progress specialty__progress--development">
+                        <div class="progress-bar specialty__progress-bar background-purple" style="width: 95%"
+                            role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                        </div>
+                    </div>
+                    <p class="mb-0">Solutions</p>
+                    <div class="progress specialty__progress--solutions">
+                        <div class="progress-bar specialty__progress-bar" style="width: 90%" role="progressbar"
+                            aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="./assets/js/popper.min.js"></script>
